--- a/EmployeManager/src/main/resources/templates/signup_bad_input.html
+++ b/EmployeManager/src/main/resources/templates/signup_bad_input.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="../static/css/signup.css" th:href="@{/css/signup.css}">
+
+
 </head>
-<body>
-$END$
-</body>
+<div class="form">
+<form  action="/sign_up" method='POST'>
+  <h1 >Sign up</h1>
+  <div>Email:</div>
+  <input type='email' name="email" value=''>
+  <div>Username:</div>
+  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+  <input type='text' name="username" value=''>
+  <p>Username is mandatory!</p>
+  <div>Password:</div>
+  <input type='password' name="password" value=''>
+  <input  name="submit" type="submit" value="Sign up">
+  <p>Password is mandatory!</p>
+
+</form>
+<a href="/login">Go to login</a>
+</div>
 </html>
